--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
   "name": "is-fail",
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "dependencies": {
+    "chai": "^3.2.0",
+    "mocha": "^2.2.5"
+  }
 }
