--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "test": "./node_modules/.bin/mocha --reporter spec --ui tdd"
   },
-  "dependencies": {
+  "devDependencies": {
     "chai": "^3.2.0",
     "mocha": "^2.2.5"
   }
